Alteração na RouteConfig.cs e inclusão de script.

--- a/1 - Basic/Aula1AspNetMVC/Aula1AspNetMVC/Views/Client/List.cshtml
+++ b/1 - Basic/Aula1AspNetMVC/Aula1AspNetMVC/Views/Client/List.cshtml
@@ -11,3 +11,13 @@
     <li>@Html.DisplayFor(m => client.Name) @Html.DisplayFor(m => client.Surname)</li>
 }
 
+@section scripts {
+    <script>
+        $(document).ready(function() {
+            $("li").click(function() {
+                $(this).hide();
+            });
+        });
+    </script>
+}
+
