--- a/1 - Basic/Aula1AspNetMVC/Aula1AspNetMVC/Views/Client/Index.cshtml
+++ b/1 - Basic/Aula1AspNetMVC/Aula1AspNetMVC/Views/Client/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@model Aula1AspNetMVC.Models.Client
+﻿@using Aula1AspNetMVC.Models
+@model Aula1AspNetMVC.Models.Client
 
 @{
     ViewBag.Title = "Index";
@@ -11,3 +12,13 @@
     <p>@Model.Surname</p>
     <p>@Model.CreatedDate</p>
 </div>
+
+@{
+    var client = ViewBag.Client;
+    <p><b>@client.Name</b></p>
+}
+
+@{
+    var client2 = ViewData["Client"] as Client;
+    <p><b>@client2.Name</b></p>
+}
