--- a/1 - Basic/Aula1AspNetMVC/Aula1AspNetMVC/Views/Shared/Error.cshtml
+++ b/1 - Basic/Aula1AspNetMVC/Aula1AspNetMVC/Views/Shared/Error.cshtml
@@ -8,6 +8,10 @@
     <hgroup>
         <h1>Error.</h1>
         <h2>An error occurred while processing your request.</h2>
+        <h1>@TempData["error"]</h1>
+        @{
+            TempData.Keep("error");
+        }
     </hgroup>
 </body>
 </html>
