Desenvolvimento do arquivo ClientsController.cs

--- a/2 - Intermediary/AppEnterprise/src/GL.AppEnterprise.UI.Mvc/Views/Clients/Create.cshtml
+++ b/2 - Intermediary/AppEnterprise/src/GL.AppEnterprise.UI.Mvc/Views/Clients/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model GL.AppEnterprise.Application.ViewModel.ClientViewModel
+﻿@model GL.AppEnterprise.Application.ViewModel.ClientAddressViewModel
 
 @{
     ViewBag.Title = "Create";
